Added projects to the portfolio

--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Mae Zhao</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-block d-lg-none">Mae Zhao: Portfolio</span>
+                <span class="d-none d-lg-block">
+                                    <!-- <span class="page-title d-none d-lg-block"> Mae Zhao: Portfolio</span> -->
+                                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#design_projects">Design Projects</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#design">Design Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#code">Code Projects</a></li>
+
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
                 </ul>
             </div>
         </nav>
@@ -51,49 +55,105 @@
                         <a href="mailto:mmz25@cornell.edu">mmz25@cornell.edu</a>
                         </div>
                     </div>
-                    <p class="lead mb-5">TODO</p>
+                    <p class="lead mb-5">Web Design and Coding portfolio. Research portfolio coming soon!</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/mae-zhao-187781173/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/MaeZhao"><i class="fab fa-github"></i></a>
+                        <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a> -->
+                        <a  class="social-icon resume subheading" href="https://cornell.box.com/s/0y5l6ljun97s9fxzxyijdupmz081gpiw">Resume</a >
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Design-->
-            <section class="resume-section" id="experience">
+            <section class="resume-section" id="design">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Design Projects</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5 design">
                         <div class="flex-text">
-                            <h3 class="mb-0">TODO</h3>
-                            <div class="subheading mb-3">TODO</div>
-                            <p>TODO</p>
+                            <h3 class="mb-0"><a href="https://github.com/MaeZhao/Glitch-Wave">Glitch Wave</a></h3>
+                            <div class="subheading mb-3">PHP, SQL</div>
+                            <p>A responsive music documentation, upload and streaming web site. Upload capabilities include the ability to upload new music, creating an account, and new playlists. Update capabilities include updating Titles, Authors, mp3 files, playlist, etc., of documented music entries. All update and upload capabilities (except for the log-in) are accessed through signing in as the administrator (username/password displayed on login page). </p>
+                            <ul>
+                                <li>View all capabilities see the project <a href="https://github.com/MaeZhao/Glitch-Wave/new/main?readme=1#all-webpage-capabilities--step-by-step-instructions">README here</a>.</li>
+                                <li>View the design process containing design sketches, persona outlines, user testing, etc., <a href="https://github.com/MaeZhao/Glitch-Wave/blob/main/documents/design-journey.md">here</a>. 
+                                </li>
+                                <li>View the live site <a href="https://young-forest-50901.herokuapp.com/">here</a>, or click on the live image. 
+                                </li>
+                            </ul>
                         </div>
-                        <div class="flex-img" style="background-image:url('assets/img/test_background.jpg')"></div>
+                        <a class="flex-img" href="https://young-forest-50901.herokuapp.com/"><div class="flex-img" style="background-image:url('assets/img/glitch_wave.gif');height:100%;"></div></a>
                     </div>
-                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5 design">
                         <div class="flex-text">
-                            <h3 class="mb-0">Ithaca Apple Harvest Festival</h3>
-                            <div class="subheading mb-3">TODO</div>
-                            <p>TODO</p>
+                            <h3 class="mb-0"><a href="https://github.com/MaeZhao/Ithaca-Apple-Harvest-Festival">Ithaca Apple Harvest Festival</a></h3>
+                            <div class="subheading mb-3">PHP, JavaScript</div>
+                            <p>A responsive site intended to document various fictional food stands at Ithaca Apple Festival. Allows users the ability to check out popular stands (home page), view stands on map (map page), and order from a stand for pickup. The main feature of this project is the responsive order form and the use of PHP partials to simplify the site backend.</p>
+                            <ul>
+                                <li>View the project <a href="https://github.com/MaeZhao/Ithaca-Apple-Harvest-Festival/blob/main/README.md">README here</a>.</li>
+                                <li>View the design process <a href="https://github.com/MaeZhao/Ithaca-Apple-Harvest-Festival/blob/main/documents/design-journey.md">here</a>. 
+                                </li>
+                                <li>View the live site <a href="https://agile-harbor-83569.herokuapp.com/">here</a>, or click on the live image. 
+                                </li>
+                            </ul>
                         </div>
-                        <div class="flex-img" style="background-image:url('assets/img/apple_fest.gif')"></div>
+                        <a class="flex-img" href="https://agile-harbor-83569.herokuapp.com/"><div class="flex-img" style="background-image:url('assets/img/apple_fest.gif');height:100%;"></div></a>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5 design">
                         <div class="flex-text">
-                            <h3 class="mb-0">Suki's Love Adventures</h3>
-                            <div class="subheading mb-3">TODO</div>
-                            <p>TODO</p>
+                            <h3 class="mb-0"> <a href="https://github.com/MaeZhao/Suki-s-Love-Adventure">Suki's Love Adventures </a></h3>
+                            <div class="subheading mb-3">HTML</div>
+                            <p>A static blog used to document the fictional life of a rooster food stands at Ithaca Apple Festival. Main features include the user-oriented design.</p>
+                            <ul>
+                                <li>View the project <a href="https://github.com/MaeZhao/Suki-s-Love-Adventure/blob/main/README.md">README here</a>.</li>
+                                <li>View the design process <a href="https://github.com/MaeZhao/Suki-s-Love-Adventure/blob/main/documents/design-journey.md">here</a>. 
+                                </li>
+                                <li>View the live site <a href="https://maezhao.github.io/Suki-s-Love-Adventure/">here</a>, or click on the live image. 
+                                </li>
+                            </ul>
                         </div>
-                        <div class="flex-img" style="background-image:url('assets/img/suki.png')"></div>
+                        <a class="flex-img" href="https://maezhao.github.io/Suki-s-Love-Adventure/"><div class="flex-img" style="background-image:url('assets/img/suki.gif'); height:100%;"></div> </a>
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
+
+            <!--Code-->
+            <section class="resume-section" id="code">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Code Projects</h2>
+                                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5 code">
+                        <div class="flex-text">
+                            <h3 class="mb-0"><a href="#" onclick="return false;">OCAML Text Editor</a></h3>
+                            <div class="subheading mb-3">OCAML, Data Structures, Functional Programming</div>
+                            <p>Coming Soon</p>
+                        </div>
+                        <a class="flex-img" href="#" onclick="return false;"><div class="flex-img" style="background-image:url('assets/img/test_background.png');height:100%;"></div></a>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5 code">
+                        <div class="flex-text">
+                            <h3 class="mb-0"> <a href="https://github.com/MaeZhao/Shortest-Path-Java">Diving the Shortest Path</a></h3>
+                            <div class="subheading mb-3">Java, Shortest Path Algorithm, Object Oriented Programming</div>
+                            <p>Coming Soon</p>
+                        </div>
+                        <a class="flex-img" href="https://github.com/MaeZhao/Shortest-Path-Java"><div class="flex-img" style="background-image:url('assets/img/shortest_path.gif');height:100%;"></div></a>
+                    </div>
+                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5 code">
+                        <div class="flex-text">
+                            <h3 class="mb-0"><a href="#" onclick="return false;">Coming Soon</a></h3>
+                            <div class="subheading mb-3">Coming Soon</div>
+                            <p>Coming Soon</p>
+                        </div>
+                        <a class="flex-img" href="#" onclick="return false;"><div class="flex-img" style="background-image:url('assets/img/test_background.png');height:100%;"></div></a>
+                    </div>
+                    
+                </div>
+            </section>
+            <hr class="m-0" />
+
             <!-- Education-->
-            <section class="resume-section" id="education">
+            <!-- <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -115,9 +175,9 @@
                     </div>
                 </div>
             </section>
-            <hr class="m-0" />
+            <hr class="m-0" /> -->
             <!-- Skills-->
-            <section class="resume-section" id="skills">
+            <!-- <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
@@ -156,18 +216,18 @@
                     </ul>
                 </div>
             </section>
-            <hr class="m-0" />
+            <hr class="m-0" /> -->
             <!-- Interests-->
-            <section class="resume-section" id="interests">
+            <!-- <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
-            <hr class="m-0" />
+            <hr class="m-0" /> -->
             <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <!-- <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
@@ -211,7 +271,7 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
