--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
                         <div class="flex-text">
                             <h3 class="mb-0"> <a href="https://github.com/MaeZhao/Shortest-Path-Java">Diving the Shortest Path</a></h3>
                             <div class="subheading mb-3">Java, Shortest Path Algorithm, Object Oriented Programming</div>
-                            <p>Coming Soon</p>
+                            <p>Shortest path algorithm using provided UI from CS 2110 at Cornell University. Written in Java in Spring of 2019.</p>
+                            <ul>
+                                <li>Run the project using the<a href="https://github.com/MaeZhao/Shortest-Path-Java#to-run">README here</a>.</li>
+                            </ul>
                         </div>
                         <a class="flex-img" href="https://github.com/MaeZhao/Shortest-Path-Java"><div class="flex-img" style="background-image:url('assets/img/shortest_path.gif');height:100%;"></div></a>
                     </div>
