added another code project

--- a/index.html
+++ b/index.html
@@ -125,11 +125,15 @@
                     <h2 class="mb-5">Code Projects</h2>
                                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5 code">
                         <div class="flex-text">
-                            <h3 class="mb-0"><a href="#" onclick="return false;">OCAML Text Editor</a></h3>
+                            <h3 class="mb-0"><a href="https://github.com/MaeZhao/OCAML-Text-Editor">OCAML Text Editor</a></h3>
                             <div class="subheading mb-3">OCAML, Data Structures, Functional Programming</div>
-                            <p>Coming Soon</p>
+                            <p>Group project in which functional programming language OCAML was used to create a text editor. Created in CS 3110 at Cornell University.</p>
+                            <ul>
+                                <li>View the project <a href="https://github.com/MaeZhao/OCAML-Text-Editor/blob/main/README.md">README here</a>.</li>
+                                <li>View installation steps <a href="https://github.com/MaeZhao/OCAML-Text-Editor/blob/main/README.md#installation-steps">here</a>.</li>
+                            </ul>
                         </div>
-                        <a class="flex-img" href="#" onclick="return false;"><div class="flex-img" style="background-image:url('assets/img/test_background.png');height:100%;"></div></a>
+                        <a class="flex-img" href="https://github.com/MaeZhao/OCAML-Text-Editor"><div class="flex-img" style="background-image:url('assets/img/ocaml.gif');height:100%;"></div></a>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5 code">
                         <div class="flex-text">
